--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,23 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #333;
-  font-family: sans-serif;
+  font-family: Helvetica, sans-serif;
   font-size: 10px;
+  line-height: 1.5;
+}
+
+h1 {
+  font-size: 150%;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 100%;
+  font-weight: 400;
+
 }
 
 .container {
@@ -14,8 +30,43 @@ nav {
   padding: 10px 0 15px 15px;
   position: fixed;
   width: 420px;
+  background-color: black;
 }
 
+
 .restaurant-list {
+  /* grey overall box */
+  background-color: #d3d3d3;
   padding-top: 50px;
+  display: inline-block;
+  float: left;
+  width: 100%;
+}
+
+
+.location {
+line-height: 1.3;
+width: 100%;
+padding-left: 5%;
+display: inline-block;
+border-bottom: 1px solid #A8A8A8;
+}
+
+.content {
+  float:left;
+  display: inline-block;
+  width: 90%;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.arrow {
+  float: right;
+  width: 10%;
+  margin-top: 4%;
+  margin-bottom: 2%;
+}
+
+.location:hover{
+  background-color: #A9A9A9;
 }
