--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ nav {
 .restaurant-list {
   /* grey overall box */
   background-color: #d3d3d3;
-  padding-top: 50px;
+  padding-top: 46px;
   display: inline-block;
   float: left;
   width: 100%;
@@ -52,6 +52,7 @@ display: inline-block;
 border-bottom: 1px solid #A8A8A8;
 }
 
+
 .content {
   float:left;
   display: inline-block;
@@ -60,13 +61,23 @@ border-bottom: 1px solid #A8A8A8;
   margin-bottom: 2%;
 }
 
+
 .arrow {
-  float: right;
-  width: 10%;
+  /* float: right;
+  width: 10%; */
   margin-top: 4%;
   margin-bottom: 2%;
 }
 
+
 .location:hover{
   background-color: #A9A9A9;
+}
+
+.clearfix:after {
+   content: ".";
+   visibility: hidden;
+   display: block;
+   height: 0;
+   clear: both;
 }
